<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">동물복지수준 자가평가</string>
    <string name="pen_location_1">1동 표본 펜 위치</string>
    <string name="pen_location_2">2동 표본 펜 위치</string>
    <string name="pen_location_3">3동 표본 펜 위치</string>
    <string name="pen_location_4">4동 표본 펜 위치</string>
    <string name="pen_location_5">5동 표본 펜 위치</string>
    <string name="pen_location_6">6동 표본 펜 위치</string>
    <string name="pen_location_7">7동 표본 펜 위치</string>
    <string name="pen_location_8">8동 표본 펜 위치</string>
    <string name="pen_location_9">9동 표본 펜 위치</string>
    <string name="pen_location_10">10동 표본 펜 위치</string>
    <string name="pen_location_11">11동 표본 펜 위치</string>
    <string name="pen_location_12">12동 표본 펜 위치</string>
    <string name="pen_location_13">13동 표본 펜 위치</string>
    <string name="pen_location_14">14동 표본 펜 위치</string>
    <string name="pen_location_15">15동 표본 펜 위치</string>
    <string name="pen_location_16">16동 표본 펜 위치</string>
    <string name="pen_location_17">17동 표본 펜 위치</string>
    <string name="pen_location_18">18동 표본 펜 위치</string>
    <string name="pen_location_19">19동 표본 펜 위치</string>
    <string name="pen_location_20">20동 표본 펜 위치</string>
    <string name="choice_dong">축사동 수를 선택하세요</string>
    <string name="pen_location_hint">표본 펜 위치를 입력하세요 ex ) 1 , 2 , 3</string>
    <string name="water_tank_time_pen_1">표본 펜 음수 행동 점수 측정</string>
    <string name="water_tank_clean_title">음수조의 위생상태가 어떻습니까?</string>
    <string name="water_tank_clean_sub_1">검사시 음수조 내부 이물질 없이 맑은 물 확인가능</string>
    <string name="water_tank_clean_sub_2">부분적 사료와 같은 이물질 보이나 신선한 물 확인가능</string>
    <string name="water_tank_clean_sub_3">이끼, 분변, 다량의 사료, 벌레 등 다수의 이물질로 인한 탁한 물 확인가능</string>
    <string name="water_drink_title">음수 대기 우의 여부와 음수 시간은 어떠합니까?</string>
    <string name="pen_total_cow">펜에 있는 소는 총 몇 두입니까?</string>
    <string name="pen_total_cow_hint">펜에 있는 소의 총 두 수를 입력하세요</string>
    <string name="waiting_drink_cow">펜의 음수 대기 우 수는 몇 두 입니까?</string>
    <string name="waiting_drink_cow_hint">펜의 음수 대기 우 수를 입력하세요</string>
    <string name="drinking_water_time">음수 우의 음수 시간은 몇 분입니까?</string>
    <string name="drinking_water_time_hint">음수 우의 음수 시간을 입력해주세요 (분 단위)</string>
    <string name="waiting_ratio_cow">음수를 대기하고 있는 대기 우 비율 (%)</string>
    <string name="water_tank_time">음수 행동 간이 측정 점수</string>
    <string name="water_score_title">충분한 물섭취 종합 점수</string>
    <string name="summer_rest_score_title">성우 혹서기 열환경과 환기 점수</string>
    <string name="calf_summer_rest_score_title">혹서기(포유송아지) 열환경과 환기 점수</string>
    <string name="winter_rest_score_title">성우 혹한기 열환경과 환기 점수</string>
    <string name="calf_winter_rest_score_title">혹한기(포유송아지) 열환경과 환기 점수</string>
    <string name="summer_and_winter_rest_score">편안한 열환경과 환기(혹서기 + 혹한기) 종합 점수</string>
    <string name="title_q4">동별 음수 행동 간이 점수 측정</string>
    <string name="title_q5">동별 깔짚 수분 간이 점수 측정</string>
    <string name="straw_score">표본 펜 깔짚 수분 간이측정 점수</string>
    <string name="straw_title">깔짚 수분 평가</string>
    <string name="straw_sub_title">깔짚 수분 간이측정 점수</string>
    <string name="breed_straw_1_title">사료조 근처의 "즉시 깔짚교체 시기"의 비율이 얼마나 되는가? (즉시 깔짚교체 시기-깔집을 쥐었을때 수분방울이 맺히거나 흘러내림)</string>
    <string name="breed_straw_2_title">사료조와 주 휴식장소사이의 "즉시 깔짚교체 시기"의 비율이 얼마나 되는가? (즉시 깔짚교체 시기-깔집을 쥐었을때 수분방울이 맺히거나 흘러내림)</string>
    <string name="breed_straw_3_title">주 휴식장소사이의 "즉시 깔짚교체 시기"의 비율이 얼마나 되는가? (즉시 깔짚교체 시기-깔집을 쥐었을때 수분방울이 맺히거나 흘러내림)</string>
    <string name="slight_hair_loss_exp">경미 외피변형 - 1개 이상 탈모,병변 및 부종은 없음</string>
    <string name="critical_hair_loss_exp">심한 외피변형 - 1개 이상의 병변 및 부종</string>
    <string name="water_tank_form">음수조는 어떤 형태입니까?</string>
    <string name="outward_Hygiene">표본우군 중 미흡 수준의 두수를 입력하세요</string>
    <string name="outward_hint">미흡 수준의 두수를 입력</string>
    <string name="outward_hygiene_score">가축외형 위생 점수</string>
    <string name="outward_hygiene_justice">미흡 : 전체 몸통부위 중 고상 이물질 면적 25%, 액상 이물질 면적 50% 초과</string>
    <string name="outward_hygiene_ratio">표본우군 중 미흡 수준의 비율</string>
    <string name="outward_hygiene_title">전체 몸통 부위 면적 중 고상 이물질 분포 25% 초과하고 액상 이물질 분포 50% 초과하는 개체의 비율이 얼마나 되는가?</string>
    <string name="rest_score_title">편안한 휴식 종합 점수</string>
    <string name="limp_title">다리절음을 보이는 개체의 두수가 얼마나 됩니까?</string>
    <string name="limp_ratio_title">다리절음 개체의 비율</string>
    <string name="critical_limp_title">심각한 다리절음을 보이는 개체의 두수가 얼마나 됩니까?</string>
    <string name="critical_limp_ratio_title">심각한 다리절음 개체의 비율</string>
    <string name="slight_hair_loss_title">경미한 외피 변형</string>
    <string name="critical_hair_loss_title">심각한 외피 변형</string>
    <string name="hair_loss_score">외피 변형 점수</string>
    <string name="slight_hair_loss">경미한 외피변형 두수를 입력하세요</string>
    <string name="critical_hair_loss">심각한 외피변형 두수를 입력하세요</string>
    <string name="hair_loss_ratio">외피변형 개체 종합 비율</string>
    <string name="runny_nose_justice">비강분비물 : 콧구멍에서 분명하게 보이는 흐름 또는 배출</string>
    <string name="runny_nose_title">전체 표본에서 비강 분비물이 있는 가축의 비율은 얼마나 되는가?</string>
    <string name="runny_nose">비강 분비물 발현 개체 두수를 입력하세요</string>
    <string name="runny_nose_ratio">비강 분비 가축 비율</string>
    <string name="cough_sub_title">표본 펜별 기침 평가</string>
    <string name="cough_title">동별 기침 평가</string>
    <string name="cough_question">펜에서 15분동안 관찰한 기침 수</string>
    <string name="cough_question_hint">15분동안 관찰한 기침 수를 입력하세요</string>
    <string name="cough_average_title">1마리당 15분 동안 기침하는 평균 수</string>
    <string name="empty_value">값을 입력하세요</string>
    <string name="cough_caution">주의! 펜 또는 동 당 평균 25두 이하 관찰 요망</string>
    <string name="ophthalmic_title">전체 표본에서 안구 분비물이 있는 가축의 비율은 얼마나 되는가?</string>
    <string name="ophthalmic_justice">안구분비물 : 눈에서 명확하게 보이는 최소 3cm 길이의 흐름 또는 배출</string>
    <string name="ophthalmic">안구 분비물 발현 개체 두수를 입력하세요</string>
    <string name="ophthalmic_ratio">안구 분비 가축 비율</string>
    <string name="breath_title">전체 표본에서 호흡 장애가 있는 가축의 비율은 얼마나 되는가?</string>
    <string name="breath_justice">호흡 장애 : 깊고 과도하게 어렵거나 곤란한 호흡</string>
    <string name="breath">호흡장애 발현 개체 두수를 입력하세요</string>
    <string name="breath_ratio">호흡장애 가축 비율</string>
    <string name="diarrhea_title">전체 표본에서 설사를 하는 가축의 비율은 얼마나 되는가?</string>
    <string name="diarrhea_justice">설사 : 미근부 아래 꼬리의 양 옆으로 묻은 풀어진 묽은 분</string>
    <string name="diarrhea">설사를 하는 개체 두수를 입력하세요</string>
    <string name="diarrhea_ratio">설사 가축 비율</string>
    <string name="ruminant_title">전체 표본에서 반추위가 부풀어 오른 가축의 비율은 얼마나 되는가?</string>
    <string name="ruminant_justice">반추위 팽창 : 엉덩이뼈와 왼쪽갈비뼈 사시의 특징적인 부풀어오름</string>
    <string name="ruminant">반추위 팽창 개체 두수를 입력하세요</string>
    <string name="ruminant_ratio">반추위 팽창 가축 비율</string>
    <string name="fall_dead_title">지난 12개월 동안 농장에서 폐사, 안락사, 긴급 도축된 가축 수는?</string>
    <string name="fall_dead_justice">폐사율 : 안락사, 긴급도축, 폐사 등 통제되지 않은 죽음</string>
    <string name="fall_dead">폐사율 개체 두수를 입력하세요</string>
    <string name="fall_dead_ratio">폐사 가축 비율</string>
    <string name="horn_title_q1">다음 중 제각/탈각에 해당되는 사항을 고르시오</string>
    <string name="horn_title_q2">제각/탈각시 마취제를 사용하는가?</string>
    <string name="horn_title_q3">제각/탈각 후 진통제를 사용하는가?</string>
    <string name="horn_sub_q1_1">뿔 제거 또는 분리를 하지 않음</string>
    <string name="horn_sub_q1_2">열 소작을 사용하여 송아지 제각 (가열 방법)</string>
    <string name="horn_sub_q1_3">가성 페이스트를 사용하여 송아지 제각 (화학적 방법)</string>
    <string name="horn_sub_q1_4">큰소의 뿔 제거</string>
    <string name="castration_title_q1">거세를 어떤 방법으로 진행하는가?</string>
    <string name="castration_title_q2">거세를 할 때 마취제를 사용하는가?</string>
    <string name="castration_title_q3">거세를 할 때 진통제를 사용하는가?</string>
    <string name="castration_sub_q1_1">거세 안함</string>
    <string name="castration_sub_q1_2">외과적 수술을 통한 거세</string>
    <string name="castration_sub_q1_3">고무링을 사용한 거세</string>
    <string name="castration_sub_q1_4">Burdizzo를 사용한 거세</string>
    <string name="struggle_justice">투쟁행동 : 머리박치기, 추방, 추격, 경합, 일으킴</string>
    <string name="struggle_title">투쟁(서열) 행동 평가</string>
    <string name="struggle_caution">주의! 펜 당 관찰시간 10분</string>
    <string name="struggle_sub_title">표본 펜별 투쟁(서열) 행동 평가</string>
    <string name="struggle_question">펜에서 10분동안 관찰한 투쟁(서열) 행동 빈도</string>
    <string name="struggle_question_hint">10분동안 관찰한 투쟁(서열) 행동 수를 입력하세요</string>
    <string name="struggle_average_title">평균 투쟁행동 빈도(1마리/1시간)</string>
    <string name="harmony_average_title">평균 화합행동 빈도(1마리/1시간)</string>
    <string name="harmony_title">화합 행동 평가</string>
    <string name="harmony_sub_title">표본 펜별 화합 행동 평가</string>
    <string name="harmony_question">펜에서 10분동안 관찰한 화합 행동 빈도</string>
    <string name="harmony_question_hint">10분동안 관찰한 화합 행동 수를 입력하세요</string>
    <string name="harmony_justice">화합행동 : 사회적 핥기, 뿔놀이</string>
    <string name="breed_shade_title">더울 때 주 사육시설에 모든 가축이 직사광선을 피해 쉴 수 있는 충분한 그늘이 제공되는가?</string>
    <string name="breed_summer_ventilating_title">주 사육시설에 환기팬이 갖춰져 있고 더위를 대비한 충분한 풍속을 제공하는가?</string>
    <string name="breed_mist_spray_title">주 사육시설에 더위를 대비한 안개분무시설이 갖춰져 있는가?</string>
    <string name="breed_wind_block_title">주 사육시설에 모든 가축이 춥고 매서운 바람(북서풍 등)을 피할 수 있는 충분한 바람차단시설이 갖춰져 있는가?</string>
    <string name="breed_winter_ventilating_title">주 사육시설에 환기팬이 갖춰져 있고 추운 계절에도 환기를 위한 최소한의 풍속 시스템 운영방안을 갖추고 있는가?</string>
    <string name="calf_shade_title">더울 때 포유송아지 사육시설에 모든 가축이 직사광선을 피해 쉴 수 있는 충분한 그늘이 제공되는가?</string>
    <string name="calf_summer_ventilating_title">포유송아지 사육시설에 환기팬이 갖춰져 있고 더위를 대비한 충분한 풍속을 제공하는가?</string>
    <string name="calf_mist_spray_title">포유송아지 사육시설에 더위를 대비한 안개분무시설이 갖춰져 있는가?</string>
    <string name="calf_straw_title">포유송아지 사육시설에 추위로부터 체온을 보호할 수 있는 마른 깔짚을 충분히 갖추었는가?</string>
    <string name="calf_warm_title">포유송아지 사육시설에 추위로부터 체온을 보호할 수 있는 보온등을 갖추었고 모든 송아지가 이용 가능한가?</string>
    <string name="calf_wind_block_title">포유송아지 사육시설에 춥고 매서운 바람(북서풍 등)을 피할 수 있는 바람차단시설이 갖춰져 있는가?</string>
    <string name="warm_ventilation_score_title">편안한 열환경과 환기 종합 점수</string>
    <string name="min_injury_score_title">상해의 최소화 종합 점수</string>
    <string name="disease_score_title">질병의 최소화 종합 점수</string>
    <string name="min_pain_score_title">고통의 최소화 종합 점수</string>
    <string name="social_behavior_score_title">사회적 행동의 표현 종합 점수</string>
    <string name="protocol_title_1">좋은 사료와 물 종합 점수</string>
    <string name="protocol_title_3">양호한 건강상태 종합 점수</string>
    <string name="choice_pen">표본펜 수를 선택하세요</string>
    <string name="freestall_list_sub_menu_title_5">5. 프리스톨 수 평가</string>
    <string name="freestall_list_sub_menu_title_6">6. 앉기 시 충돌 평가</string>
    <string name="freestall_list_sub_menu_title_7">7. 프리스톨 영역 외 앉기 평가</string>
    <string name="freestall_list_sub_menu_title_8">8. 앉기 동작 소요시간 평가</string>
    <string name="freestall_list_sub_menu_title_9">9. 가축외형 평가 - 아랫다리</string>
    <string name="freestall_list_sub_menu_title_10">10. 가축외형 평가 - 뒷부분</string>
    <string name="freestall_list_sub_menu_title_11">11. 가축외형 평가 - 유방</string>
    <string name="freestall_list_sub_menu_title_12">12. 혹서기 그늘 평가</string>
    <string name="freestall_list_sub_menu_title_13">13. 혹서기 환기팬 평가</string>
    <string name="freestall_list_sub_menu_title_14">14. 혹서기 안개분무시설 평가</string>
    <string name="freestall_list_sub_menu_title_15">15. 혹한기 바람차단시설 평가</string>
    <string name="freestall_list_sub_menu_title_16">16. 혹한기 환기시설 평가</string>
    <string name="freestall_list_sub_menu_title_17">17. 포유송아지 그늘 평가</string>
    <string name="freestall_list_sub_menu_title_18">18. 포유송아지 환기팬 평가</string>
    <string name="freestall_list_sub_menu_title_19">19. 포유송아지 안개분무시설 평가</string>
    <string name="freestall_list_sub_menu_title_20">20. 포유송아지 깔짚 평가</string>
    <string name="freestall_list_sub_menu_title_21">21. 포유송아지 보온 평가</string>
    <string name="freestall_list_sub_menu_title_22">22. 포유송아지 바람차단시설 평가</string>
    <string name="freestall_list_sub_menu_title_23">23. 경미한 다리절음 평가</string>
    <string name="freestall_list_sub_menu_title_24">24. 심각한 다리절음 평가</string>
    <string name="freestall_list_sub_menu_title_25">25. 경미한 외피 변형 평가</string>
    <string name="freestall_list_sub_menu_title_26">26. 심각한 외피 변형 평가</string>
</resources>