<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slight_hair_loss_title"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="50dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slight_hair_loss_exp"
                android:padding="20dp"
                android:textSize="16dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/breed_hair_loss_pen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pen_location_hint"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:inputType="number">
            </EditText>
            <EditText
                android:id="@+id/breed_slight_hair_loss_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/slight_hair_loss"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:inputType="number">
            </EditText>

        </LinearLayout>




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>